VRT Project updated with UM2 class updated with ADMN062 TC issue fixed

--- a/test-output/ER_UserManagementTest.html
+++ b/test-output/ER_UserManagementTest.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2020-07-16 02:03:30</span>
+					<span class='suite-started-time'>2020-07-16 19:38:39</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 2m 17s+413ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 17s+829ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 2m 17s+413ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 17s+829ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2020-07-16 02:01:12</span> 
+							<span class='panel-lead suite-started-time'>2020-07-16 19:38:22</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2020-07-16 02:03:30</span> 
+							<span class='panel-lead suite-ended-time'>2020-07-16 19:38:39</span> 
 						</div> 
 					</div>
 				</div>
@@ -198,10 +198,6 @@
 											<td>ScriptVersion</td>
 											<td>1.0.0.0</td>
 										</tr>
-										<tr>
-											<td>VRT Version</td>
-											<td>1.1.0.3</td>
-										</tr>
 								</tbody>
 							</table>
 						</div>
@@ -257,17 +253,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='205a5c4f-1e58-49c5-b006-ec2eb64c86ef'>
+										<li class='collection-item test displayed active pass ' extentid='9355286c-ca96-443a-bbe0-41d8de13715a'>
 											<div class='test-head'>
-												<span class='test-name'>ADMN067A-Verify if Administrator is able to access the default privilege-Copy Files_Reports - Copy Setups </span>
+												<span class='test-name'>ADMN062-Verify if Administrator is able to access the default privilege-Delete Assets </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-07-16 02:02:38</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-07-16 02:03:09</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 30s+733ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-07-16 19:38:26</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-07-16 19:38:39</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 12s+884ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -284,55 +280,13 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>02:03:09</td>
-																	<td class='step-details'>Test Case PASSED IS # ADMN067A #</td>
+																	<td class='timestamp'>19:38:38</td>
+																	<td class='step-details'>Test Case PASSED IS # ADMN062 #</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>02:03:09</td>
-																	<td class='step-details'><a href='C:\Users\manoj.ghadei\git\VRT\VRT/PassTCScreenshots/ADMN067A_2020_07_16_020309.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\manoj.ghadei\git\VRT\VRT/PassTCScreenshots/ADMN067A_2020_07_16_020309.png' /></a></td>
-																</tr>
-														</tbody>
-													</table>
-													<ul class='collapsible node-list' data-collapsible='accordion'>
-													</ul>
-												</div>
-											</div>
-										</li>
-										<li class='collection-item test displayed active pass ' extentid='0c6da0af-fd71-4053-af50-701096c8d8e3'>
-											<div class='test-head'>
-												<span class='test-name'>ADMN067-Verify the functionality when disabled user credentials are given in authentication window of Asset Details- Copy Assets </span>
-												<span class='test-status label right outline capitalize pass'>pass</span>
-												<span class='category-assigned hide '></span>
-											</div>
-											<div class='test-body'>
-												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-07-16 02:03:19</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-07-16 02:03:29</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 10s+252ms</span>
-												</div>
-												<div class='test-desc'></div>
-												<div class='test-attributes'>
-												</div>
-												<div class='test-steps'>
-													<table class='bordered table-results'>
-														<thead>
-															<tr>
-																<th>Status</th>
-																<th>Timestamp</th>
-																<th>Details</th>
-															</tr>
-														</thead>
-														<tbody>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>02:03:29</td>
-																	<td class='step-details'>Test Case PASSED IS # ADMN067B #</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>02:03:29</td>
-																	<td class='step-details'><a href='C:\Users\manoj.ghadei\git\VRT\VRT/PassTCScreenshots/ADMN067B_2020_07_16_020329.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\manoj.ghadei\git\VRT\VRT/PassTCScreenshots/ADMN067B_2020_07_16_020329.png' /></a></td>
+																	<td class='timestamp'>19:38:39</td>
+																	<td class='step-details'><a href='C:\Users\manoj.ghadei\git\VRT\VRT/PassTCScreenshots/ADMN062_2020_07_16_073838.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\manoj.ghadei\git\VRT\VRT/PassTCScreenshots/ADMN062_2020_07_16_073838.png' /></a></td>
 																</tr>
 														</tbody>
 													</table>
