--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\manoj.ghadei\AppData\Local\Temp\testng-eclipse-128340841\testng-customsuite.xml</span>
+                    <span>C:\Users\manoj.ghadei\AppData\Local\Temp\testng-eclipse-1455391530\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,12 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.vrt.testcases.HitNTrialTests" hash-for-method="ADMN067A(ADMIN067, 067, HeatBath, HTC, Hyderabad)">ADMN067A(ADMIN067, 067, HeatBath, HTC, Hyderabad)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.vrt.testcases.HitNTrialTests" hash-for-method="ADMN067B">ADMN067B</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.vrt.testcases.HitNTrialTests" hash-for-method="ADMN062(ADMIN062, 062, HeatBath, HTC, Hyderabad)">ADMN062(ADMIN062, 062, HeatBath, HTC, Hyderabad)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -130,21 +125,12 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="ADMN067A(ADMIN067, 067, HeatBath, HTC, Hyderabad)">
-                  </a> <!-- ADMN067A(ADMIN067, 067, HeatBath, HTC, Hyderabad) -->
-                  <span class="method-name">ADMN067A</span>
-                  <span class="parameters">(ADMIN067, 067, HeatBath, HTC, Hyderabad)</span>
+                  <a name="ADMN062(ADMIN062, 062, HeatBath, HTC, Hyderabad)">
+                  </a> <!-- ADMN062(ADMIN062, 062, HeatBath, HTC, Hyderabad) -->
+                  <span class="method-name">ADMN062</span>
+                  <span class="parameters">(ADMIN062, 062, HeatBath, HTC, Hyderabad)</span>
                   <em>
-(ADMN067A-Verify if Administrator is able to access the default privilege-Copy Files_Reports - Copy Setups)                  </em>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="ADMN067B">
-                  </a> <!-- ADMN067B -->
-                  <span class="method-name">ADMN067B</span>
-                  <em>
-(Verify if Administrator is able to access the default privilege-Copy Files_Reports- copy Assets)                  </em>
+(ADMN062-Verify if Administrator is able to access the default privilege-Delete Assets)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -152,7 +138,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\manoj.ghadei\AppData\Local\Temp\testng-eclipse-128340841\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\manoj.ghadei\AppData\Local\Temp\testng-eclipse-1455391530\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -189,11 +175,7 @@
               <span class="test-group-name">Regression</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">ADMN067A</span>
-                <br/>
-              </div> <!-- method-in-group -->
-              <div class="method-in-group">
-                <span class="method-in-group-name">ADMN067B</span>
+                <span class="method-in-group-name">ADMN062</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -213,20 +195,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'ADMN067A')
+data.setCell(0, 1, 'ADMN062')
 data.setCell(0, 2, 'com.vrt.testcases.HitNTrialTests')
-data.setCell(0, 3, 30681);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'ADMN067B')
-data.setCell(1, 2, 'com.vrt.testcases.HitNTrialTests')
-data.setCell(1, 3, 10185);
+data.setCell(0, 3, 12291);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 40 seconds</span>
+              <span class="suite-total-time">Total running time: 12 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -259,31 +237,19 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">Setup</span>
-                <span class="method-start">75030 ms</span>
+                <span class="method-start">605 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">ADMN067A(ADMIN067, 067, HeatBath, HTC, Hyderabad)</span>
-                <span class="method-start">86121 ms</span>
+                <span class="method-name">ADMN062(ADMIN062, 062, HeatBath, HTC, Hyderabad)</span>
+                <span class="method-start">4534 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">Teardown([TestResult name=ADMN067A status=SUCCESS method=HitNTrialTests.ADMN067A(java.lang.String, java.lang....)</span>
-                <span class="method-start">116804 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">Setup</span>
-                <span class="method-start">116889 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">ADMN067B</span>
-                <span class="method-start">126902 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">Teardown([TestResult name=ADMN067B status=SUCCESS method=HitNTrialTests.ADMN067B()[pri:0, instance:com.vrt.te...)</span>
-                <span class="method-start">137088 ms</span>
+                <span class="method-name">Teardown([TestResult name=ADMN062 status=SUCCESS method=HitNTrialTests.ADMN062(java.lang.String, java.lang.St...)</span>
+                <span class="method-start">16827 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">endReport</span>
-                <span class="method-start">137196 ms</span>
+                <span class="method-start">17428 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
