--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -11,12 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN067A</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN067B</td>
+<td>ADMN062</td>
 <td>Regression </td>
 </tr>
 <tr>
