--- a/test-output/old/UMRegressionSuite/classes.html
+++ b/test-output/old/UMRegressionSuite/classes.html
@@ -61,12 +61,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN103D</td>
+<td>ADMN103</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN103</td>
+<td>ADMN103D</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -150,12 +150,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CADMN28</td>
+<td>CADMN2</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CADMN2</td>
+<td>CADMN28</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -170,12 +170,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CADMN23</td>
+<td>CADMN5</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CADMN5</td>
+<td>CADMN23</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -195,12 +195,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN058A</td>
+<td>CADMN22</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CADMN22</td>
+<td>ADMN058A</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -255,12 +255,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CADMN38</td>
+<td>CADMN16</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CADMN16</td>
+<td>CADMN38</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -275,22 +275,22 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CADMN36</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
 <td>CADMN14</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CADMN37</td>
+<td>CADMN36</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>CADMN15</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>CADMN37</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -399,12 +399,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN055</td>
+<td>ADMN099</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN099</td>
+<td>ADMN055</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -434,22 +434,22 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN052</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
 <td>ADMN096</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN050</td>
+<td>ADMN052</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>ADMN094</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN050</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -504,12 +504,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN050A</td>
+<td>ADMN094A</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN094A</td>
+<td>ADMN050A</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -534,12 +534,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN054A</td>
+<td>ADMN116</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN116</td>
+<td>ADMN054A</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -569,22 +569,22 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN119B</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
 <td>ADMN074</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN073</td>
+<td>ADMN119B</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>ADMN119A</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN073</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -678,6 +678,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>ADMN040B</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>ADMN040A</td>
 <td>Regression </td>
 </tr>
@@ -699,6 +704,11 @@
 <tr>
 <td>&nbsp;</td>
 <td>ADMN032A</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN037A</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -743,17 +753,22 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN037</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
 <td>ADMN069J</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>ADMN037F</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>ADMN069I</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN041B</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -793,11 +808,6 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN037A</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
 <td>ADMN016a</td>
 <td>Regression </td>
 </tr>
@@ -809,6 +819,11 @@
 <tr>
 <td>&nbsp;</td>
 <td>ADMN022</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN037G</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -833,17 +848,27 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>ADMN037E</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>ADMN069D</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN069C</td>
+<td>ADMN037D</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>ADMN045A</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>ADMN069C</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -854,11 +879,6 @@
 <tr>
 <td>&nbsp;</td>
 <td>ADMN024</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN067</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -928,11 +948,6 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN039</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
 <td>ADMN034B</td>
 <td>Regression </td>
 </tr>
@@ -968,12 +983,17 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
+<td>ADMN032</td>
+<td>Regression </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>ADMN017a</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN032</td>
+<td>ADMN067A</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -983,12 +1003,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN008</td>
+<td>ADMN030</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN030</td>
+<td>ADMN008</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -1003,7 +1023,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN037D</td>
+<td>ADMN026</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -1013,7 +1033,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN026</td>
+<td>ADMN039B</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -1053,12 +1073,12 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN126</td>
+<td>ADMN067B</td>
 <td>Regression </td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>ADMN067A</td>
+<td>ADMN126</td>
 <td>Regression </td>
 </tr>
 <tr>
@@ -1089,16 +1109,6 @@
 <tr>
 <td>&nbsp;</td>
 <td>ADMN042</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN041</td>
-<td>Regression </td>
-</tr>
-<tr>
-<td>&nbsp;</td>
-<td>ADMN040</td>
 <td>Regression </td>
 </tr>
 <tr>
