--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">137,457</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">17,879</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.vrt.testcases.HitNTrialTests</td><td><a href="#m0">ADMN067A</a></td><td rowspan="1">1594845158785</td><td rowspan="1">30681</td></tr><tr class="passedeven"><td><a href="#m1">ADMN067B</a></td><td rowspan="1">1594845199566</td><td rowspan="1">10185</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.vrt.testcases.HitNTrialTests</td><td><a href="#m0">ADMN062</a></td><td rowspan="1">1594908506580</td><td rowspan="1">12291</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.vrt.testcases.HitNTrialTests#ADMN067A</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th></tr><tr class="param stripe"><td>ADMIN067</td><td>067</td><td>HeatBath</td><td>HTC</td><td>Hyderabad</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.vrt.testcases.HitNTrialTests#ADMN067B</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.vrt.testcases.HitNTrialTests#ADMN062</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th><th>Parameter #5</th></tr><tr class="param stripe"><td>ADMIN062</td><td>062</td><td>HeatBath</td><td>HTC</td><td>Hyderabad</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
