--- a/test-output/ER_UM1_UserManagementTest.html
+++ b/test-output/ER_UM1_UserManagementTest.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2020-07-17 14:10:21</span>
+					<span class='suite-started-time'>2020-07-17 20:46:52</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 53s+771ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 2m 47s+396ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 53s+771ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 2m 47s+396ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2020-07-17 14:09:27</span> 
+							<span class='panel-lead suite-started-time'>2020-07-17 20:44:05</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2020-07-17 14:10:21</span> 
+							<span class='panel-lead suite-ended-time'>2020-07-17 20:46:52</span> 
 						</div> 
 					</div>
 				</div>
@@ -184,7 +184,7 @@
 										</tr>
 										<tr>
 											<td>TestSuiteName</td>
-											<td>UserManagementTest</td>
+											<td>UM1_UserManagementTest</td>
 										</tr>
 										<tr>
 											<td>BS Version</td>
@@ -257,17 +257,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='f5bb7c70-6169-4616-a182-027fed0e853d'>
+										<li class='collection-item test displayed active pass ' extentid='1ba7ec79-bead-4b16-b6ff-505d96a895cd'>
 											<div class='test-head'>
-												<span class='test-name'>ADMN062-Verify if Administrator is able to access the default privilege-Delete Assets </span>
+												<span class='test-name'>ADMN069C-Verify mandatory login for a new user before saving any changes-Equipment-Edit </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-07-17 14:10:20</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-07-17 14:10:21</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+102ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-07-17 20:46:14</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-07-17 20:46:24</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 10s+525ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -284,13 +284,45 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>14:10:20</td>
-																	<td class='step-details'>Test Case PASSED IS # ADMN062 #</td>
+																	<td class='timestamp'>20:46:24</td>
+																	<td class='step-details'>Test Case PASSED IS # ADMN069C #</td>
 																</tr>
+														</tbody>
+													</table>
+													<ul class='collapsible node-list' data-collapsible='accordion'>
+													</ul>
+												</div>
+											</div>
+										</li>
+										<li class='collection-item test displayed active pass ' extentid='35610f86-8982-4ace-95ac-f52de7d9280f'>
+											<div class='test-head'>
+												<span class='test-name'>ADMN069D-Verify mandatory login for a new user before saving any changes-Equipment Delete </span>
+												<span class='test-status label right outline capitalize pass'>pass</span>
+												<span class='category-assigned hide '></span>
+											</div>
+											<div class='test-body'>
+												<div class='test-info'>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-07-17 20:46:42</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-07-17 20:46:51</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 9s+904ms</span>
+												</div>
+												<div class='test-desc'></div>
+												<div class='test-attributes'>
+												</div>
+												<div class='test-steps'>
+													<table class='bordered table-results'>
+														<thead>
+															<tr>
+																<th>Status</th>
+																<th>Timestamp</th>
+																<th>Details</th>
+															</tr>
+														</thead>
+														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>14:10:21</td>
-																	<td class='step-details'><a href='C:\Users\SSC\git\VRT/PassTCScreenshots/ADMN062_2020_07_17_021020.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\SSC\git\VRT/PassTCScreenshots/ADMN062_2020_07_17_021020.png' /></a></td>
+																	<td class='timestamp'>20:46:51</td>
+																	<td class='step-details'>Test Case PASSED IS # ADMN069D #</td>
 																</tr>
 														</tbody>
 													</table>
