--- a/test-output/ER_UM3_customized_UserPrivilagesTest.html
+++ b/test-output/ER_UM3_customized_UserPrivilagesTest.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2020-07-17 14:10:21</span>
+					<span class='suite-started-time'>2020-07-17 23:57:26</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 53s+771ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 20s+393ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 53s+771ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 20s+393ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2020-07-17 14:09:27</span> 
+							<span class='panel-lead suite-started-time'>2020-07-17 23:57:05</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2020-07-17 14:10:21</span> 
+							<span class='panel-lead suite-ended-time'>2020-07-17 23:57:26</span> 
 						</div> 
 					</div>
 				</div>
@@ -184,7 +184,7 @@
 										</tr>
 										<tr>
 											<td>TestSuiteName</td>
-											<td>UserManagementTest</td>
+											<td>UM3_customized_UserPrivilagesTest</td>
 										</tr>
 										<tr>
 											<td>BS Version</td>
@@ -197,10 +197,6 @@
 										<tr>
 											<td>ScriptVersion</td>
 											<td>1.0.0.0</td>
-										</tr>
-										<tr>
-											<td>VRT Version</td>
-											<td>1.1.0.3</td>
 										</tr>
 								</tbody>
 							</table>
@@ -257,17 +253,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='f5bb7c70-6169-4616-a182-027fed0e853d'>
+										<li class='collection-item test displayed active pass ' extentid='4444de49-a4b2-40c3-8fef-4367d350b571'>
 											<div class='test-head'>
-												<span class='test-name'>ADMN062-Verify if Administrator is able to access the default privilege-Delete Assets </span>
+												<span class='test-name'>CADMN5_Verify Admin is unable to access the customized unchecked privilege-Delete Equipments </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-07-17 14:10:20</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-07-17 14:10:21</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+102ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2020-07-17 23:57:15</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2020-07-17 23:57:25</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 10s+444ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -284,13 +280,8 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>14:10:20</td>
-																	<td class='step-details'>Test Case PASSED IS # ADMN062 #</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>14:10:21</td>
-																	<td class='step-details'><a href='C:\Users\SSC\git\VRT/PassTCScreenshots/ADMN062_2020_07_17_021020.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\SSC\git\VRT/PassTCScreenshots/ADMN062_2020_07_17_021020.png' /></a></td>
+																	<td class='timestamp'>23:57:25</td>
+																	<td class='step-details'>Test Case PASSED IS # CADMN5 #</td>
 																</tr>
 														</tbody>
 													</table>
