--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="78a366">  <td>20/07/16 19:38:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HitNTrialTests.testsetup()[pri:0, instance:com.vrt.testcases.HitNTrialTests@69a3d1d]">&gt;&gt;testsetup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@209833425</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/07/16 19:38:22</td>   <td>602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HitNTrialTests.Setup()[pri:0, instance:com.vrt.testcases.HitNTrialTests@69a3d1d]">&gt;&gt;Setup</td> 
-<td>&nbsp;</td>  <td>main@209833425</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/07/16 19:38:26</td>   <td>4531</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HitNTrialTests.ADMN062(java.lang.String, java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.vrt.testcases.HitNTrialTests@69a3d1d]">ADMN062</td> 
-  <td>main@209833425</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/07/16 19:38:38</td>   <td>16825</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HitNTrialTests.Teardown(org.testng.ITestResult)[pri:0, instance:com.vrt.testcases.HitNTrialTests@69a3d1d]">&lt;&lt;Teardown</td> 
-<td>&nbsp;</td>  <td>main@209833425</td>   <td></td> </tr>
-<tr bgcolor="78a366">  <td>20/07/16 19:38:39</td>   <td>17425</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HitNTrialTests.endReport()[pri:0, instance:com.vrt.testcases.HitNTrialTests@69a3d1d]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@209833425</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>20/07/17 23:57:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UM3.PreSetup()[pri:0, instance:com.vrt.testcases.UM3@38bc8ab5]">&gt;&gt;PreSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2014866032</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>20/07/17 23:57:09</td>   <td>3788</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;UM3.Setup()[pri:0, instance:com.vrt.testcases.UM3@38bc8ab5]">&gt;&gt;Setup</td> 
+<td>&nbsp;</td>  <td>main@2014866032</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>20/07/17 23:57:15</td>   <td>9642</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UM3.CADMN5()[pri:0, instance:com.vrt.testcases.UM3@38bc8ab5]">CADMN5</td> 
+  <td>main@2014866032</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>20/07/17 23:57:25</td>   <td>20094</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UM3.Teardown(org.testng.ITestResult)[pri:0, instance:com.vrt.testcases.UM3@38bc8ab5]">&lt;&lt;Teardown</td> 
+<td>&nbsp;</td>  <td>main@2014866032</td>   <td></td> </tr>
+<tr bgcolor="709393">  <td>20/07/17 23:57:25</td>   <td>20121</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;UM3.endReport()[pri:0, instance:com.vrt.testcases.UM3@38bc8ab5]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2014866032</td>   <td></td> </tr>
 </table>
